Added validation to input, add home icon, add filter on-click event, and add moment.js

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
 
   <div class="container-fluid">
     <div class="jumbotron-fluid rounded" id="jumbotron_img">
+    <button id="btnHome" class="btn btn-primary m-3 text-white" data-toggle="tooltip" data-html="true" title="<em>Home is Where The Hearth Is</em>">
+      <i class="fas fa-home"></i>
+    </button>
       <div class="container text-center text-white pt-5 pb-5">
         <h1 class="display-2">Preheat Your Ovens...</h1>
         <h1 class="display-3">The Holidaze are almost here...</h1>
